<resources>
    <string name="app_name">MaybeProject</string>
    <string name="usernamehint">Username</string>
    <string name="passwordhint">Password</string>
    <string name="buttonText">Login</string>
    <string name="returnButton">Return</string>
    <string name="aboutText">Shax\'s wine bar - is a unique symbiosis of a city and a wine salon, the peculiarity of which is that you can buy wine and taste it directly in the institution. \nThe menu features dishes in the original interpretation of our chef. \nShax\'s wine bar - is an ideal place to meet friends and colleagues in the pleasant atmosphere of a city cafe.</string>
    <string name="moreButton">More</string>
    <string name="startButton">Start</string>
    <string name="aboutBar">Some information about us</string>
    <string name="aboutUs">About Us</string>
    <string name="aboutWine">Shax\'s wine bar is one of the most diverse and exquisite in the city.</string>
    <string name="moreText">Our talented sommeliers and cavists will be able to offer you exquisite wines of many world wineries, and by purchasing a bottle of this noble drink, you have the opportunity not only to enjoy it within the walls of our institution, but also to take it with you to enjoy a glass of wine at home or with friends.</string>
<string name="interior">INTERIOR</string>
    <string name="moreAboutCafe">There are many cozy corners in Shax\'s Wine bar where not only business meetings are held, but also sincere conversations with friends, warm Sunday evenings with family and friends.
        \nOur city served as inspiration for Shakhmardan Bazarbay to create an eco-friendly and cozy interior of the Shax\'s Wine bar.</string>
</resources>