<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:orientation="vertical">


    <Button
        android:id="@+id/button4"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:onClick="returnToLoginPage"
        android:text="@string/returnButton" />

    <TextView
        android:id="@+id/gotUsername"
        android:layout_width="344dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:padding="5dp"
        android:text=""
        android:layout_marginTop="30dp"
        android:textSize="25dp" />

    <TextView
        android:layout_width="264dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:background="#F0F0F0"
        android:text="@string/aboutBar"
        android:textAlignment="center"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="259dp"
        android:layout_marginTop="50dp"
        android:padding="15dp"
        android:text="@string/aboutText"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="81dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/moreButton"
            android:onClick="onDirectToAboutCafe"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/startButton" />

    </LinearLayout>


</LinearLayout>