<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:paddingTop="20dp"
            android:text="@string/aboutUs"
            android:textColor="#000000"
            android:textFontWeight="900"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="25dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            app:srcCompat="@drawable/second" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:text="@string/aboutWine"
            android:textFontWeight="800"
            android:textColor="#000000"
            android:textSize="21dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="131dp"
            android:text="@string/moreText"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/interior"
            android:textAlignment="center"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:textFontWeight="800"
            android:textSize="23dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:text="@string/moreAboutCafe"
            android:textSize="18dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="174dp"
            android:layout_height="39dp"
            android:textSize="16dp"
            android:textColor="@color/textColor"
            android:background="@drawable/button_background"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/startButton" />


    </LinearLayout>
</ScrollView>